--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 ﻿<!doctype html>
-<meta charset="utf-8">
-<title>Forma</title>
-<link rel="canonical" href="/forma.html">
-<script>location.replace('/forma.html' + location.search + location.hash);</script>
-<noscript><meta http-equiv="refresh" content="0; url=/forma.html"></noscript>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Redirecting…</title>
+  <link rel="canonical" href="./forma.html">
+  <meta http-equiv="refresh" content="0; url=./forma.html">
+  <script>
+    // Redirect to forma.html while preserving query and hash
+    location.replace('./forma.html' + location.search + location.hash);
+  </script>
+</head>
+<body>
+  <p>Redirecting to <a href="./forma.html">forma.html</a>…</p>
+</body>
+</html>
