--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             
           </div>
     </div>
-<div class="section section-clients-2 video-padding" id="friends2">
+<div class="section section-clients-2 video-padding pattern-image" id="friends2">
   <div class="video-background">
     <!-- in #friends2 -->
 <video autoplay muted loop playsinline preload="auto" poster="assets/img/Sgrada_Varna_4_poster.jpg">
@@ -887,92 +887,11 @@
           </div>
           <div class="col-md-12">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-13-BF2_3298.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-
-
-                <div class="col-md-12" >
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-1-BF2_3210.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                  <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-11-BF2_3293-HDR-3.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-14-BF2_3302.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-15-BF2_3303.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-16-BF2_3304.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-17-BF2_3309.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-18-BF2_3313.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-19-BF2_3324.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-20-BF2_3335.jpg"/>
-                    </div>
-                </div>
-                <div class="arrow-down">
-                  <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg"><path d="M2 2 L20 10 L38 2" stroke="currentColor" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </div>
-                <div class="col-md-12">
-                    <div class="project-image reveal-card">
-                       <img src="assets/img-optimized/Interior1-21-BF2_3339.jpg"/>
-                    </div>
+                <div
+                  class="js-folder-gallery"
+                  data-folder="assets/img/Banovo/Banovo"
+                  data-manifest="banovo.json"
+                  > <!-- optional: if you use your filter buttons -->
                 </div>
             </div>
           </div>
@@ -1007,7 +926,8 @@
                 <!-- Minimal placeholder; no filenames needed -->
                 <div
                   class="js-folder-gallery"
-                  data-folder="assets/img/Banovo/Banovo"
+                  data-folder="assets/img-optimized/Box3"
+                  data-manifest="box3.json"
                   > <!-- optional: if you use your filter buttons -->
                 </div>
 
@@ -2864,11 +2784,9 @@ window.addEventListener("load", () => {
 </script>
 <script>
 (function () {
-  // We will look for this file INSIDE each data-folder
-  const IMG_LIST_FILE = 'banovo.json';
+  const DEFAULT_MANIFEST = 'images.json';
   const EXT_RE = /\.(png|jpe?g|webp|gif|avif|svg)$/i;
 
-  // Thin arrow between images (keeps your current styling via currentColor)
   const ARROW_HTML = `
     <div class="arrow-down" aria-hidden="true">
       <svg viewBox="0 0 40 12" xmlns="http://www.w3.org/2000/svg">
@@ -2892,9 +2810,16 @@ window.addEventListener("load", () => {
     return col;
   }
 
-  async function loadList(folder) {
-    const url = folder.replace(/\/+$/, '') + '/' + IMG_LIST_FILE;
-    const res = await fetch(url, { cache: 'no-store' });
+  function getManifestName(el) {
+    // You can use data-manifest OR data-json
+    const m = (el.dataset.manifest || el.dataset.json || '').trim();
+    return m || DEFAULT_MANIFEST;
+  }
+
+  async function loadList(folder, manifest) {
+    const base = folder.replace(/\/+$/, '');
+    const url  = `${base}/${manifest}`;
+    const res  = await fetch(url, { cache: 'no-store' });
     if (!res.ok) throw new Error(`HTTP ${res.status} for ${url}`);
     const list = await res.json();
     if (!Array.isArray(list)) throw new Error(`JSON is not an array at ${url}`);
@@ -2905,14 +2830,15 @@ window.addEventListener("load", () => {
 
   async function renderGallery(placeholder) {
     const folder   = (placeholder.dataset.folder || '').replace(/^\/*|\/*$/g, '');
+    const manifest = getManifestName(placeholder);
     const storeTag = placeholder.dataset.store || '';
     if (!folder) return;
 
-    // insert into the existing inner .row to preserve your layout
+    // Insert into the existing inner .row to preserve layout
     const containerRow = placeholder.closest('.row') || placeholder.parentElement;
 
     try {
-      const files = await loadList(folder);
+      const files = await loadList(folder, manifest);
       const frag = document.createDocumentFragment();
 
       files.forEach((name, idx) => {
@@ -2935,9 +2861,6 @@ window.addEventListener("load", () => {
   }
 
   function boot() {
-    // Because your galleries live inside hidden project modals,
-    // render them immediately (not via IntersectionObserver),
-    // so content is ready when the modal opens.
     document.querySelectorAll('.js-folder-gallery').forEach(renderGallery);
   }
 
