--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                           <img src="assets/img/bedroom.jpg"/>
                            <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_2">
                                <div class="content">
-                                  <h4>Еднофамилна къща</h4>
+                                  <h4>Къща Баново</h4>
                                   <p>Кликни тук... </p>
                               </div>
                           </a>
@@ -300,7 +300,7 @@
                     <img src="assets/img-optimized/Interior4-12-BF2_0446.jpg">
                     <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_6">
                          <div class="content">
-                            <h4>Кухни</h4>
+                            <h4>Комплекс Панорама</h4>
                             <p>Всички снимки... </p>
                         </div>
                     </a>
@@ -906,7 +906,7 @@
     <div class="project-details" id="tennera-details">
       <div class="container">
         <div class="project-title">
-            <h5>Комплекс Тенера<span>.</span></h5>
+            <h5>Апартамент<span>.</span></h5>
             <h2>Варна</h2>
             <div class="separator-container">
               <div class="separator line-separator">∎</div>
@@ -915,7 +915,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="project-text">
-              <p><span>Описание</span>Частен Мезонет</p>
+              <p><span>Описание</span>Интериорен Дизайн</p>
               <p><span>Статус</span>Изпълнен</p>
               <p><span>Година</span>2021</p>
               <p><span>Площ</span>200 кв.м</p>
