removed grid from video

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             
           </div>
     </div>
-<div class="section section-clients-2 video-padding pattern-image" id="friends2">
+<div class="section section-clients-2 video-padding" id="friends2">
   <div class="video-background">
     <!-- in #friends2 -->
 <video autoplay muted loop playsinline preload="auto" poster="assets/img/Sgrada_Varna_4_poster.jpg">
