--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="project add-animation animation-1">
                     <img src="assets/img/Частни/къщи/Anatoli/Dnevna_006.jpg">
-                    <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_4">
+                    <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_13">
                          <div class="content">
                             <h4>Къща Евсиновград</h4>
                             <p>Кликни тук... </p>
@@ -326,7 +326,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="project add-animation animation-2">
                     <img src="assets/img/Ap_2_Париж/spalnia_101.jpg">
-                    <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_5">
+                    <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_14">
                          <div class="content">
                             <h4>Апартамент Париж</h4>
                             <p>Още снимки... </p>
@@ -338,7 +338,7 @@
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="project add-animation animation-3">
                     <img src="assets/img/Интериор_къща_Долна_трака_1/Garderobna_001.jpg">
-                    <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_6">
+                    <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_15">
                          <div class="content">
                             <h4>Апартамент Трака</h4>
                             <p>Всички снимки... </p>
@@ -2268,6 +2268,120 @@
                        <img src="assets/img/supermarkets/s2.jpg"/>
                     </div>
                 </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="project-content" id="project_13">
+  <span class="icon-close"><i class="pe-7s-close-circle"></i></span>
+  <div>
+    <div class="project-details" id="tennera-details">
+      <div class="container">
+        <div class="project-title">
+            <h5>Апартамент<span>.</span></h5>
+            <h2>Варна</h2>
+            <div class="separator-container">
+              <div class="separator line-separator">∎</div>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="project-text">
+              <p><span>Описание</span>Интериорен Дизайн</p>
+              <p><span>Статус</span>Изпълнен</p>
+              <p><span>Година</span>2021</p>
+              <p><span>Площ</span>200 кв.м</p>
+              </div>
+          </div>
+          <div class="col-md-12">
+            <div class="row">
+                <!-- Minimal placeholder; no filenames needed -->
+                <div
+                  class="js-folder-gallery"
+                  data-folder="assets/img/Частни/къщи/Anatoli"
+                  data-manifest="box8.json"
+                  > <!-- optional: if you use your filter buttons -->
+                </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="project-content" id="project_14">
+  <span class="icon-close"><i class="pe-7s-close-circle"></i></span>
+  <div>
+    <div class="project-details" id="tennera-details">
+      <div class="container">
+        <div class="project-title">
+            <h5>Апартамент<span>.</span></h5>
+            <h2> Париж </h2>
+            <div class="separator-container">
+              <div class="separator line-separator">∎</div>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="project-text">
+              <p><span>Описание</span>Интериорен Дизайн</p>
+              <p><span>Статус</span>Изпълнен</p>
+              <p><span>Година</span>2021</p>
+              <p><span>Площ</span>200 кв.м</p>
+              </div>
+          </div>
+          <div class="col-md-12">
+            <div class="row">
+                <!-- Minimal placeholder; no filenames needed -->
+                <div
+                  class="js-folder-gallery"
+                  data-folder="assets/img/Ap_2_Париж"
+                  data-manifest="box3.json"
+                  > <!-- optional: if you use your filter buttons -->
+                </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="project-content" id="project_15">
+  <span class="icon-close"><i class="pe-7s-close-circle"></i></span>
+  <div>
+    <div class="project-details" id="tennera-details">
+      <div class="container">
+        <div class="project-title">
+            <h5>Апартамент<span>.</span></h5>
+            <h2>Варна</h2>
+            <div class="separator-container">
+              <div class="separator line-separator">∎</div>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="project-text">
+              <p><span>Описание</span>Интериорен Дизайн</p>
+              <p><span>Статус</span>Изпълнен</p>
+              <p><span>Година</span>2021</p>
+              <p><span>Площ</span>200 кв.м</p>
+              </div>
+          </div>
+          <div class="col-md-12">
+            <div class="row">
+                <!-- Minimal placeholder; no filenames needed -->
+                <div
+                  class="js-folder-gallery"
+                  data-folder="assets/img/Интериор_къща_Долна_трака_1"
+                  data-manifest="box9.json"
+                  > <!-- optional: if you use your filter buttons -->
+                </div>
+
             </div>
           </div>
         </div>
