--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 
              <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="project add-animation animation-1">
-                    <img src="assets/img/facbricia2.jpg">
+                    <img src="assets/img/Обществени/Магазини/Fabrizia/100.jpg">
                     <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)" data-target="project_10">
                          <div class="content">
                             <h4>Магазини</h4>
