--- a/index.html
+++ b/index.html
@@ -2958,6 +2958,110 @@
       }
     });
 
+    // Scroll-based opacity effect for text elements and section panels
+    (function () {
+      var textElements = [];
+      var sectionPanels = [];
+      var ticking = false;
+
+      function initTextElements() {
+        // Select only paragraph elements, excluding contact form
+        textElements = document.querySelectorAll('p:not(#contactForm p, .contact-form p, form p)');
+      }
+
+      function initSectionPanels() {
+        // Select the three main section panels
+        sectionPanels = document.querySelectorAll('#interior, #architecture, #friends2');
+      }
+
+      function isElementInViewport(el) {
+        var rect = el.getBoundingClientRect();
+        return (
+          rect.top >= 0 &&
+          rect.left >= 0 &&
+          rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+          rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+        );
+      }
+
+      function updateTextOpacity() {
+        var scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+        var windowHeight = window.innerHeight || document.documentElement.clientHeight;
+
+        // Update paragraph opacity
+        textElements.forEach(function (element) {
+          if (isElementInViewport(element)) {
+            var rect = element.getBoundingClientRect();
+            var elementTop = rect.top + scrollTop;
+            var elementHeight = rect.height;
+
+            // Calculate opacity based on scroll position
+            // Start fading when element is 50% visible
+            var fadeStart = elementTop - windowHeight * 0.5;
+            var fadeEnd = elementTop + elementHeight + windowHeight * 0.5;
+            var fadeRange = fadeEnd - fadeStart;
+
+            var opacity = 1;
+            if (scrollTop > fadeStart) {
+              opacity = 1 - ((scrollTop - fadeStart) / fadeRange);
+              opacity = Math.max(0, Math.min(1, opacity));
+            }
+
+            element.style.opacity = opacity;
+            element.style.transition = 'opacity 0.1s ease-out';
+          }
+        });
+
+        // Update section panel opacity
+        sectionPanels.forEach(function (panel) {
+          var rect = panel.getBoundingClientRect();
+          var elementTop = rect.top + scrollTop;
+          var elementHeight = rect.height;
+
+          // Calculate opacity based on scroll position
+          // Start fading when panel is 30% visible
+          var fadeStart = elementTop - windowHeight * 0.3;
+          var fadeEnd = elementTop + elementHeight + windowHeight * 0.3;
+          var fadeRange = fadeEnd - fadeStart;
+
+          var opacity = 1;
+          if (scrollTop > fadeStart) {
+            opacity = 1 - ((scrollTop - fadeStart) / fadeRange);
+            opacity = Math.max(0.3, Math.min(1, opacity)); // Minimum opacity of 0.3
+          }
+
+          panel.style.opacity = opacity;
+          panel.style.transition = 'opacity 0.2s ease-out';
+        });
+
+        ticking = false;
+      }
+
+      function onScroll() {
+        if (!ticking) {
+          ticking = true;
+          requestAnimationFrame(updateTextOpacity);
+        }
+      }
+
+      // Initialize on load
+      window.addEventListener('load', function () {
+        initTextElements();
+        initSectionPanels();
+        updateTextOpacity();
+      });
+
+      // Update on scroll
+      window.addEventListener('scroll', onScroll, { passive: true });
+
+      // Re-initialize on resize
+      window.addEventListener('resize', function () {
+        initTextElements();
+        initSectionPanels();
+        updateTextOpacity();
+      });
+    })();
+
     (function () {
       var interior = document.getElementById('interior');
       var projects = document.getElementById('projects');
@@ -2968,7 +3072,7 @@
       var lastLiftApplied = null;
 
       // Tunables
-      var leadStartVh = - 0.5;      // start lift this fraction of viewport before entering
+      var leadStartVh = - 0.65;      // start lift this fraction of viewport before entering
       var maxLiftScale = 0.3;     // fraction of viewport height for max lift strength
       var maxLiftPx = Math.max(1100, Math.min(window.innerHeight * maxLiftScale, 640));
 
